Tue Feb 13 2006  Johan Euphrosine <johan@mekensleep.org>

	* Release 1.0.14

	* pokerui/pokerrenderer.py (PokerRenderer.bootstrap): 
	based login show at startup upon first_time flag
	* pokernetwork/pokerclient.py (PokerClientFactory.saveAuthToFile): 
	save "" login instead of username to update first_time flag
	
Fri Feb 10 2006  Loic Dachary  <loic@gnu.org>

	* pokerclient2d/poker2d.py (run): if settings file does not exist,
	  copy default one to it instead of copying it to ~/.poker2d/poker2d.xml

Tue Jan 24 2006  Johan Euphrosine <johan@mekensleep.org>
	
	* pokerui/pokerrenderer.py (PokerRenderer.updateDecorations): 
	added hide/show "lobby_tab_window" when leaving/entering lobby OR tournament

	* pokerclient2d/tournaments.c: 
	* pokerclient2d/lobby.c: 
	added g_lobby_tab_state for keeping track of the state of tournament/lobby tab.	
	merged tournament/lobby tab callbacks
	
Fri Jan 27 2006  Loic Dachary  <loic@gnu.org>

	* pokernetwork/pokerchildren.py (PokerRsync.configure): support rsync proxy

	* pokerclient2d/poker2d.py (PokerClientFactory2D.selectServer): use proxy aware connector

	* pokernetwork/proxy.py: transparent proxy support draft-luotonen-web-proxy-tunneling-01.txt

Tue Jan 24 2006  Loic Dachary  <loic@gnu.org>

	* pokerui/pokerinterface.py (PokerInterface.updateMenu): 
	* pokerclient2d/menu.c (handle_menu): kill display 2d/3d switch

Tue Jan 24 2006  Johan Euphrosine <johan@mekensleep.org>

	* pokerui/pokerrenderer.py: added wrap_text function instead of DummyWriter

Mon Jan 23 2006  Benoit Treins

        * pokernetwork/pokerserver.py: added 'muck_timeout' parameter in poker table and xml table def file

	* pokernetwork/pokerserver.py: changed 'timeout' parameter to 'player_timeout' in poker table and xml table def file
	
        * pokernetwork/pokerpackets.py(PACKET_POKER_TABLE): added 'muck_timeout' parameter
	
	* pokernetwork/pokerpackets.py(PACKET_POKER_TABLE): changed 'timeout' parameter to 'player_timeout'	


Tue Jan 03 2006  Benoit Treins
